--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --inspect server.js",
+    "build":"webpack"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,17 @@
   },
   "homepage": "https://github.com/gaofan19901103/EmailTemplaing#readme",
   "dependencies": {
+    "@babel/preset-env": "^7.5.5",
     "activedirectory": "^0.7.2",
+    "babel-loader": "^8.0.6",
+    "express": "^4.17.1",
+    "msnodesqlv8": "^0.8.1",
+    "mssql": "^5.1.0",
     "passport-windowsauth": "^3.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "webpack": "^4.39.0",
+    "webpack-cli": "^3.3.6"
   }
 }
