--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --inspect server.js",
-    "build":"webpack"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,7 @@
   },
   "homepage": "https://github.com/gaofan19901103/EmailTemplaing#readme",
   "dependencies": {
-    "@babel/preset-env": "^7.5.5",
     "activedirectory": "^0.7.2",
-    "babel-loader": "^8.0.6",
     "express": "^4.17.1",
     "msnodesqlv8": "^0.8.1",
     "mssql": "^5.1.0",
@@ -29,6 +27,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
+    "css-loader": "3.1.0",
+    "less": "3.9.0",
+    "less-loader": "5.0.0",
+    "mini-css-extract-plugin": "0.8.0",
     "webpack": "^4.39.0",
     "webpack-cli": "^3.3.6"
   }
