--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --inspect server.js",
-<<<<<<< HEAD
-    "build":"webpack --watch"
-=======
-    "build": "webpack"
->>>>>>> 30401428c3e8d61cca53278d1536ede61e21a444
+    "build": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -27,7 +23,9 @@
     "express": "^4.17.1",
     "msnodesqlv8": "^0.8.1",
     "mssql": "^5.1.0",
-    "passport-windowsauth": "^3.0.1"
+    "passport-windowsauth": "^3.0.1",
+    "stomp-client": "^0.9.0",
+    "stompit": "^0.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
